
File: NAMESPACE
---------------
- Exporting new function common.interval()

File: common.interval.R
------------------------

- New function common.interval() trims a rwl object to a common interval
  using one of three methods. Contributed by a user Filipe Campelo (fcampelo@ci.uc.pt).
  This is his first contribution. Need to add to author list.


* CHANGES IN dplR VERSION 1.5.5

File: NAMESPACE
---------------

- Exporting new functions

Various .R files:
-----------------

- Use 'nzchar(x)' instead of 'nchar(x) > 0'

File: rwi.stats.running.R
-------------------------

- Added prewhitening option to rwi.stats.running() and by extension rwi.stats().
  There are two new arguments prewhiten and n that are passed to normalize1()
  as in the xdating functions e.g., corr.rwl.seg(). Help file changed.

Files: corr.rwl.seg.R, seg.plot.R, rwl.stats.R, spag.plot.R
-----------------------------------------------------------

- Support for input of length 1


File: corr.rwl.seg.R
--------------------

- Fixed 'ylim' in plot()
- Fixed "no guides" case
- stops with a clear error message if 'rwl' has too few rows for the given
  'seg.length' and 'bin.floor' combination

File: fill.internal.NA.R
------------------------

- New function fill.internal.NA() fills NA values internal to a series.
  Written by Andy Bunn and Mikko Korpela. Help page added as well.

File: pointer.R
---------------

- New function pointer() calculates pointer years from a group of
  ring-width series.  Written by Pierre Mérian, adapted for dplR and
  improved by Andy Bunn and Mikko Korpela. Help page added as well.

File: rcs.R
-----------

- Graceful handling of empty input

File: read.compact.R
--------------------

- Pretty printing of summary output, no more ragged lines

File: read.fh.R
---------------

- Pretty printing of summary output, no more ragged lines
- More robust detection of block and single column data representations